--- a/server/index.html
+++ b/server/index.html
@@ -1,3 +1,2 @@
 <script src='./server.js'></script>
-<script src='./ranking/jsFunc.js'></script>
-<script src='./ranking/ranking.js'></script>
+<script src='./ranking/rankingView.js'></script>
