--- a/server/index.html
+++ b/server/index.html
@@ -1,3 +1,14 @@
-<script src='./server.js'></script>
-<script src='./ranking/ranking.js'></script>
-<script src='./ranking/rankingView.js'></script>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+</head>
+
+<body>
+    <script src='./server.js'></script>
+    <script src='./ranking/ranking.js'></script>
+    <script src='./ranking/rankingView.js'></script>
+</body>
+
+</html>
