--- a/server/index.html
+++ b/server/index.html
@@ -7,6 +7,7 @@
 
 <body>
     <script src='./server.js'></script>
+    <script src='./autoGamble.js'></script>
     <script src='./ranking/ranking.js'></script>
     <script src='./ranking/rankingView.js'></script>
 </body>
